--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,15 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Flights</h1>
+
+<h1>Welcome to Spreedly Air</h1>
+<br />
+<h2>Available Flights</h2>
 
 <table>
   <thead>
     <tr>
       <th>Price</th>
-      <th>Ticket amount</th>
       <th>Origin</th>
       <th>Destination</th>
-      <th colspan="3"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -20,8 +22,6 @@
         <td><%= flight.origin %></td>
         <td><%= flight.destination %></td>
         <td><%= link_to 'Show', flight %></td>
-        <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
-        <td><%= link_to 'Destroy', flight, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
